[gd_scene load_steps=7 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]
[ext_resource path="res://OtherMontserrat.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 51
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 51
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 51
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 53
outline_size = 4
outline_color = Color( 0.0470588, 0.45098, 0.419608, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.478431, 0.0235294, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 351.0
margin_right = 528.0
margin_bottom = 432.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -33.0
margin_right = 240.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Select Character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -303.0
margin_right = 240.0
margin_bottom = -222.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "EXIT"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -452.0
margin_right = 238.0
margin_bottom = -386.0
custom_fonts/font = SubResource( 4 )
text = "Włodarz odbić"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
